# DroneFlightAgent

./: .dockerignore  Dockerfile  README.md
scripts/: ros_entrypoint.sh
ws/install/: local_setup.sh  setup.sh
ws/install/drone_sim/share/drone_sim/: package.sh  package.xml
ws/install/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-function-mocker.h  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-nice-strict.h  gmock-spec-builders.h  gmock.h
ws/install/include/gmock/internal/: gmock-internal-utils.h  gmock-port.h  gmock-pp.h
ws/install/include/gtest/: gtest-assertion-result.h  gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h  gtest_prod.h
ws/install/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port-arch.h  (+3 more)
ws/install/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
ws/install/share/drone_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
ws/install/share/px4/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
ws/log/: latest_build  latest_list
ws/src/drone_sim/: CMakeLists.txt
ws/src/drone_sim/launch/: px4_gz_bringup.launch.py  spawn_drone.launch.py
ws/src/drone_sim/models/simple_drone/: model.sdf
ws/src/drone_sim/models/x500_custom/: model.sdf
ws/src/drone_sim/worlds/: empty.world  empty_sensors.world
(+3187 files in other folders)
